--- a/index.html
+++ b/index.html
@@ -2,75 +2,159 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
-  <title>Love Day Counter 💖</title>
+  <title>Happy Birthday Thảo Nhung 🎂</title>
   <style>
     body {
+      margin: 0;
+      height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
-      margin: 0;
-      background: linear-gradient(120deg, #ff9a9e, #fad0c4);
-      font-family: "Segoe UI", sans-serif;
-      text-align: center;
-      color: #fff;
+      flex-direction: column;
+      background: linear-gradient(135deg, #ffd6e7, #ffe6f0);
+      overflow: hidden;
+      font-family: "Comic Sans MS", cursive;
     }
 
-    .container {
-      background: rgba(255, 255, 255, 0.1);
-      padding: 40px;
-      border-radius: 20px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
-      animation: fadeIn 1.2s ease;
+    /* Hiệu ứng lung linh nền */
+    .sparkle {
+      position: absolute;
+      width: 4px;
+      height: 4px;
+      background: white;
+      border-radius: 50%;
+      opacity: 0.8;
+      animation: sparkleAnim 3s infinite;
+    }
+    @keyframes sparkleAnim {
+      0% { transform: scale(0.5) translateY(0); opacity: 0.8; }
+      50% { transform: scale(1.5) translateY(-20px); opacity: 0.3; }
+      100% { transform: scale(0.5) translateY(0); opacity: 0.8; }
     }
 
-    h1 {
-      font-size: 2.5em;
-      margin-bottom: 20px;
+    /* Hộp quà */
+    .gift {
+      width: 120px;
+      height: 120px;
+      background: #ff4d94;
+      position: relative;
+      cursor: pointer;
+      border-radius: 10px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .gift:before {
+      content: "";
+      position: absolute;
+      width: 20px;
+      height: 120px;
+      background: white;
+    }
+    .gift:after {
+      content: "";
+      position: absolute;
+      height: 20px;
+      width: 120px;
+      background: white;
     }
 
-    #days {
-      font-size: 3em;
+    /* Ảnh bung ra */
+    .photo {
+      width: 80px;
+      height: 80px;
+      border-radius: 10px;
+      position: absolute;
+      opacity: 0;
+      transition: all 1s ease-out;
+      transform: scale(0.5);
+    }
+
+    /* Lời chúc */
+    #wish {
+      font-size: 20px;
       font-weight: bold;
-      color: #ff006e;
-    }
-
-    .heart {
-      font-size: 3em;
-      animation: beat 1s infinite;
-    }
-
-    @keyframes beat {
-      0%, 100% { transform: scale(1); }
-      50% { transform: scale(1.3); }
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
+      color: #ff4d94;
+      text-align: center;
+      margin-top: 20px;
+      max-width: 80%;
+      line-height: 1.5;
+      text-shadow: 0 0 8px rgba(255,255,255,0.6);
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>💖 Ngày yêu nhau 💖</h1>
-    <p>Chúng mình đã bên nhau:</p>
-    <div id="days"></div>
-    <div class="heart">❤️</div>
-  </div>
+
+  <!-- Nền lung linh -->
+  <div id="sparkles"></div>
+
+  <!-- Hộp quà -->
+  <div class="gift" id="giftBox">🎁</div>
+
+  <!-- 9 tấm ảnh -->
+  <img src="link1.jpg" class="photo" id="p1">
+  <img src="link2.jpg" class="photo" id="p2">
+  <img src="link3.jpg" class="photo" id="p3">
+  <img src="link4.jpg" class="photo" id="p4">
+  <img src="link5.jpg" class="photo" id="p5">
+  <img src="link6.jpg" class="photo" id="p6">
+  <img src="link7.jpg" class="photo" id="p7">
+  <img src="link8.jpg" class="photo" id="p8">
+  <img src="link9.jpg" class="photo" id="p9">
+
+  <!-- Lời chúc -->
+  <div id="wish"></div>
 
   <script>
-    // 👉 Đổi ngày này thành ngày bắt đầu yêu nhau
-    const startDate = new Date("2024-02-14"); 
-
-    function updateDays() {
-      const today = new Date();
-      const diffTime = today - startDate;
-      const diffDays = Math.floor(diffTime / (1000 * 60 * 60 * 24));
-      document.getElementById("days").innerText = diffDays + " ngày 💕";
+    // Tạo lung linh
+    for (let i = 0; i < 40; i++) {
+      let s = document.createElement("div");
+      s.className = "sparkle";
+      s.style.left = Math.random() * window.innerWidth + "px";
+      s.style.top = Math.random() * window.innerHeight + "px";
+      s.style.animationDuration = (2 + Math.random() * 3) + "s";
+      document.getElementById("sparkles").appendChild(s);
     }
 
-    updateDays();
+    // Vị trí ảnh bung ra (theo vòng tròn)
+    const positions = [
+      [200,0],[140,140],[0,200],[-140,140],
+      [-200,0],[-140,-140],[0,-200],[140,-140],[200,200]
+    ];
+
+    const giftBox = document.getElementById("giftBox");
+    let opened = false;
+
+    giftBox.addEventListener("click", () => {
+      if(opened) return;
+      opened = true;
+
+      // Bung ảnh ra
+      positions.forEach((pos, index) => {
+        let p = document.getElementById("p" + (index+1));
+        p.style.left = (window.innerWidth/2 + pos[0]) + "px";
+        p.style.top = (window.innerHeight/2 + pos[1]) + "px";
+        p.style.opacity = 1;
+        p.style.transform = "scale(1) rotate(360deg)";
+      });
+
+      // Sau 2s thì hiện lời chúc
+      setTimeout(typeEffect, 2000);
+    });
+
+    // Lời chúc
+    const text = "Anh chúc Thảo Nhung có một ngày sinh nhật 🎂 thật đầy ý nghĩa. Cô bé nhỏ của anh thêm một tuổi mới luôn vui vẻ 😇, tươi tắn và hạnh phúc bên gia đình. Chúc em có kết quả thật tốt trong học tập nhaaa 💯 Mãiiii yeuuu 😘";
+    const words = text.split(" ");
+    let i = 0;
+
+    function typeEffect() {
+      if (i < words.length) {
+        document.getElementById("wish").innerHTML += words[i] + " ";
+        i++;
+        setTimeout(typeEffect, 300);
+      }
+    }
   </script>
 </body>
 </html>
