--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
       gap: 10px;
       padding: 20px;
       box-sizing: border-box;
+      opacity: 0;
+      transition: opacity 1s ease-in-out;
     }
 
     .bg-images img {
@@ -38,21 +40,39 @@
     .text {
       position: relative;
       z-index: 1;
-      font-size: 28px;
+      font-size: 38px;
       color: #fff;
       text-align: center;
-      font-weight: bold;
-      text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
+      font-weight: 900;
+      line-height: 1.5;
+      text-shadow: 3px 3px 12px rgba(0, 0, 0, 0.5);
       max-width: 80%;
+      opacity: 0;
+      transition: opacity 1s ease-in-out;
     }
 
-    .highlight {
-      color: #ffeff7;
+    .gift {
+      position: absolute;
+      z-index: 10;
+      cursor: pointer;
+      width: 200px;
+      height: 200px;
+      background: url('https://cdn-icons-png.flaticon.com/512/869/869636.png') no-repeat center/contain;
+      animation: bounce 1s infinite alternate;
+    }
+
+    @keyframes bounce {
+      from { transform: translateY(0); }
+      to { transform: translateY(-20px); }
     }
   </style>
 </head>
 <body>
-  <div class="bg-images">
+  <!-- Hộp quà -->
+  <div class="gift" id="gift"></div>
+
+  <!-- Ảnh nền -->
+  <div class="bg-images" id="bg">
     <img src="https://raw.githubusercontent.com/Cotaycaca123/test/refs/heads/main/IMG_3545.jpeg" alt="">
     <img src="https://raw.githubusercontent.com/Cotaycaca123/test/refs/heads/main/IMG_4992.jpeg" alt="">
     <img src="https://raw.githubusercontent.com/Cotaycaca123/test/refs/heads/main/IMG_4995.jpeg" alt="">
@@ -64,22 +84,35 @@
     <img src="https://raw.githubusercontent.com/Cotaycaca123/test/refs/heads/main/att.HRrCGQSTH8rtQPpiFIcy7Dbg_1ZusoDjIjZ0tOMKxPY.jpeg" alt="">
   </div>
 
+  <!-- Lời chúc -->
   <div class="text" id="message"></div>
 
   <script>
-    const message = "Anh chúc Thảo Nhung có một ngày sinh nhật 🎂 thật đầy ý nghĩa. " +
-      "Cô bé nhỏ của anh thêm một tuổi mới luôn vui vẻ 😇 tươi tắn và hạnh phúc bên gia đình, " +
-      "có kết quả tốt trong học tập nhaaa 💯 Mãiiii yeuuu 😘";
-    
+    const gift = document.getElementById("gift");
+    const bg = document.getElementById("bg");
+    const messageEl = document.getElementById("message");
+
+    const message = "Anh chúc Thảo Nhung có một ngày sinh nhật 🎂 thật đầy ý nghĩa.\n\n" +
+      "Cô bé nhỏ của anh thêm một tuổi mới luôn vui vẻ 😇 tươi tắn và hạnh phúc bên gia đình.\n\n" +
+      "Có kết quả tốt trong học tập nhaaa 💯\n\n" +
+      "Mãiiii yeuuu 😘";
+
     let i = 0;
+
+    gift.onclick = () => {
+      gift.style.display = "none";   // ẩn hộp quà
+      bg.style.opacity = "1";        // hiện ảnh
+      messageEl.style.opacity = "1"; // hiện chữ
+      typeEffect();
+    };
+
     function typeEffect() {
       if (i < message.length) {
-        document.getElementById("message").innerHTML += message.charAt(i);
+        messageEl.innerHTML += message.charAt(i);
         i++;
-        setTimeout(typeEffect, 100);
+        setTimeout(typeEffect, 80);
       }
     }
-    window.onload = typeEffect;
   </script>
 </body>
 </html>
